style.css
h1,h2,h3 {
	font-family: 'Anonymous Pro',monospace;
	margin: 0px;
}

h1 {
	font-size: 40pt;
	margin-right: 15px;
}

h2 {
	font-size: 25pt;
}

#cg505 h1, #top-bar h2, #floating-bar h2 {
	animation: onload-top 3s ease-in;
}

#stacking-context {
    top: 0px;
	position: relative;
	z-index: 1;
}

#stacking-context > div {
	color: #ffffff;
	margin-top: 0px;
	top: 0px;
	width: 100%;
}

#stacking-context .container {
	max-width: 66%;
	margin: auto;
	overflow: hidden;
	white-space: nowrap;
	padding: 20px 20px 10px 20px;
}

#stacking-context > #cg505 {
    position: fixed;
    z-index: 5;
	/* background-color: #000000; */
	height: 84px;
}

#cg505 > .container {
	padding-bottom: 0px;
}

#stacking-context > #concealer {
	color: rgba(0, 0, 0, 0);
    position: relative;
	background-color: #00791b;
	z-index: 4;
	height: 84px;
}

#concealer > .container {
	padding-bottom: 0px;
}

#stacking-context > #floating-bar {
    position: fixed;
	z-index: 3;
	background-color: #00791b;
	height: 84px;
}

#floating-bar > .container {
   	padding-bottom: 0px;
}

#floating-bar h1, #floating-bar h2 {
	display: inline;
}

#floating-bar h1 {
	color: rgba(0, 0, 0, 0);
}

#stacking-context > #top-bar {
    position: relative;
	z-index: 2;
	margin-top: -84px;
	background-color: #00791b;
	height: 134px;
}

#top-bar h1 {
	color: rgba(0, 0, 0, 0);
	height: 64px;
}

#stacking-context > #floating-bar-ext {
	position: fixed;
	color: rgba(0, 0, 0, 0);
	background-color: #00791b;
	z-index: 1;
	height: 94px;
}

@keyframes onload-top {
	from {
        color: #00791b;
	}
	to {
        color: #ffffff;
	}
}

@keyframes onload-body {
	from {
		margin-top: -30px;
		opacity: 0;
	}
	to {
		margin-top: 0px;
		opacity: 1;
	}
}

h3 {
	padding-top: 30px;
	font-size:20pt;
	color: #00791b;
}

#main-container {
    padding: 25px 20px 200px 20px;
	animation: onload-body 1s ease-out;
	max-width: 66%;
	margin: auto;
}

body {
	margin: 0px;
    font-family: 'Open Sans',sans;
}

#tagline {
    font-size: 15pt;
	margin-top: 0px;
}

.placeholder {
	position:relative;
    top: -80px;
}

a {
	color: inherit;
	font-weight: bold;
	font-family: 'Anonymous Pro',monospace;
}

iframe#sc {
	max-width: 800px;
}

.sm-link {
	margin-right: 5px;
}

.int-link {
    text-decoration-color: rgba(0, 0, 0, 0);
	font-family: inherit;
	transition: text-decoration-color .5s;
}

.int-link:hover {
	text-decoration-color: rgba(0, 0, 0, 1);
}

@media (max-width: 900px) {
	#stacking-context .container, #main-container {
		max-width: 100%;
	}
}

@media (max-width: 400px) {
	#stacking-context > #top-bar {
		height: 123px;
	}
	#top-bar h2 {
		font-size: 18pt;
	}
}

@media (max-width: 550px) {
	#floating-bar h2 {
		font-size: 18pt;
	}
}

@media (max-width: 440px) {
	/* #floating-bar h1{
	   font-size: 25pt;
	   } */
	/* #cg505 h1, .floating-bar h2 {
	   display: block;
	   } */
	/* #floating-bar > #container {
	   padding-top: 15px;
	   } */

	/* #stacking-context > #top-bar {
	   z-index: 7;
	   }
	   #stacking-context > #floating-bar {
	   z-index: 6;
	   } */
	#floating-bar h1 {
		color: #ffffff;
		animation: onload-top 3s ease-in;
	}
	#floating-bar h1, #floating-bar h2 {
		display: block;
	}
	#floating-bar h1 {
		font-size: 25pt;
		height: 40px;
	}
	#floating-bar h2 {
		/* margin-top: x; */
	}
	#floating-bar > .container {
		padding-top: 15px;
	}
	#floating-bar-ext {
		/* display: none; */
	}
	#stacking-context > #cg505 {
		position: relative;
	}
	#stacking-context > #concealer {
		top: -84px;
	}
	#stacking-context > #top-bar {
		margin-top: -168px;
	}
}

.vid-container-container {
	max-width: 560px;
}

.vid-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 0px;
	height: 0px;
	overflow: hidden;
}

.vid-container iframe, .video-container object, .video-container embed {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
}

